--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
     <title>Massage Haven - Luxury Spa & Wellness Center</title>
     <meta name="description" content="Experience tranquility at Massage Haven, a premium spa offering therapeutic treatments designed to rejuvenate your body, mind, and spirit." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
